added new form controls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="bg-gradient-to-b from-indigo-100/[0.7] to-white">
-<!-- <div class="bg-gray-50 h-screen"> -->
+<div
+    class="bg-neutral-800 h-screen bg-[url('https://gaashwd.com/wp-content/uploads/2022/11/Contact-us-illustration.svg')] bg-right-bottom bg-no-repeat">
     <app-navbar></app-navbar>
-    <div class="w-3/4 md:w-1/2 m-auto">
+    <div class="w-3/4 md:w-1/2 m-auto ">
         <router-outlet></router-outlet>
     </div>
 </div>
