--- a/src/app/module/deleted-items/deleted-items.component.html
+++ b/src/app/module/deleted-items/deleted-items.component.html
@@ -1,19 +1,22 @@
-<div class="bg-indigo-900/[0.3] p-4 font-bold flex justify-between border-b border-indigo-200">Deleted Items List -
-    Items ({{contacts.length}}) <div><button></button></div></div>
-<div  *ngIf="contacts.length > 0" class="overflow-y-auto h-[65vh]">
-    <div 
-        class="grid grid-cols-1 md:grid-cols-2 gap-4 p-2 bg-gradient-to-b from-indigo-50 to-white">
+<div class="bg-neutral-800 p-4 font-semibold flex justify-between text-white border-b">Deleted Items List -
+    Items ({{contacts.length}}) <div><button></button></div>
+</div>
+<div *ngIf="contacts.length > 0" class="overflow-y-auto h-[65vh] bg-neutral-800">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-2 ">
         <div *ngFor="let contact of contacts">
-            <div class="mt-2 shadow border-2 border-white">
-                <div class="flex justify-end gap-2 bg-indigo-900/[0.2] p-1">
-                    <button (click)="restore(contact.id)" matTooltip="Restore"><i
-                            class="material-icons hover:text-pink-500 duration-300 align-middle hover:scale-110 scale-75">autorenew</i></button>
-                    <button (click)="delete(consentDialog,contact.id)" matTooltip="Delete Permanently"><i
-                            class="material-icons hover:text-orange-700 duration-300 align-middle hover:scale-110 scale-75">delete</i></button>
+            <div class="mt-2 shadow border rounded-lg">
+                <div class="flex justify-end bg-neutral-700 rounded-t-lg text-white">
+                    <button mat-icon-button (click)="restore(contact.id)" matTooltip="Restore"
+                        class="hover:text-pink-500 duration-300 hover:scale-110 scale-75"><i
+                            class="material-icons">autorenew</i></button>
+                    <button mat-icon-button (click)="delete(consentDialog,contact.id)"
+                        class="hover:text-orange-700 duration-300 hover:scale-110 scale-75"
+                        matTooltip="Delete Permanently"><i class="material-icons">delete</i></button>
                 </div>
-                <div class="grid md:grid-cols-3">
-                    <div class="md:col-span-1 w-1/2 md:w-full m-auto p-4"><img
-                            class="rounded-full hover:scale-105 duration-300" [src]="contact.avatar" alt=""></div>
+                <div class="grid md:grid-cols-3 rounded-b-lg bg-neutral-800">
+                    <div
+                        class="md:col-span-1 w-1/2 md:w-full h-[8rem] p-4 bg-[url('/assets/yellow-brush-stroke-style-3.png')] bg-contain bg-no-repeat bg-center">
+                        <img class="rounded-full hover:scale-105 duration-300" [src]="contact.avatar" alt=""></div>
                     <div
                         class="md:col-span-2 m-4 bg-gray-50 p-4 flex flex-col rounded shadow text-xs text-center self-center ">
                         <div class="font-bold text-gray-400 pb-2 border-b flex flex-col gap-2 md:flex-row">Name: <span
