--- a/src/app/module/navbar/navbar.component.html
+++ b/src/app/module/navbar/navbar.component.html
@@ -1,10 +1,11 @@
-<ul class="flex gap-6 justify-between list-none bg-indigo-900/[0.2] mb-2 border-b border-indigo-200 p-1">
-    <div class="text-sm md:text-xl font-bold self-center">
-        <a routerLink="/" class="">Contact App</a>
+<div class="flex justify-between items-center list-none bg-neutral-800 px-8 mb-2 border-b p-1 sticky top-0">
+    <div class="text-base md:text-lg lg:text-xl text-amber-400 font-semibold flex items-center">
+        <img class="m-3 w-10" src="/assets/call.svg" alt="">
+        <a routerLink="/">CONTACT APP</a>
     </div>
-    <div class="flex items-center">
-        <li><button (click)="deletedItems()" matTooltip="Deleted Items" class="flex"><i class="material-icons text-red-600">delete</i></button></li>
-        <li><a routerLink="/">About</a></li>
-        <li><a routerLink="/">Help</a></li>
+    <div class="flex items-center gap-2">
+        <button mat-icon-button (click)="deletedItems()" matTooltip="Deleted Items"><mat-icon
+                class="text-orange-700">delete</mat-icon></button>
+        <button mat-icon-button matTooltip="Help"><mat-icon class="text-amber-400">help</mat-icon></button>
     </div>
-</ul>
+</div>
