--- a/src/app/module/navbar/navbar.component.scss
+++ b/src/app/module/navbar/navbar.component.scss
@@ -1,9 +1,3 @@
-li {
-    @apply font-bold hover:scale-95 duration-300 text-sm md:text-base;
-
-}
-
-
-a,button {
-    @apply p-4 hover:bg-indigo-900/[0.2] hover:rounded-full duration-500;
+button {
+    @apply hover:scale-95 duration-300 text-sm md:text-base;
 }
