--- a/src/app/module/page-not-found/page-not-found.component.html
+++ b/src/app/module/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
-<div class="">
-    <img src="https://error404.fun/img/full-preview/2x/30.png" alt="">
-    <div class="text-4xl font-bold text-green-600 hover:text-green-500 bg-yellow-100 p-4 rounded-lg">
-       404! Page Not Found!
+<div>
+    <img src="/assets/notFound.png" alt="">
+    <div class="text-4xl text-white p-4 rounded-lg text-center">
+       404 Page Not Found!
     </div>
 </div>
